--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@ body{
 .content-left{
     width: 40%;
     height: 500px;
+    padding: 30px 0 0 ;
 }
 
 .content-left img{
     animation-play-state: paused; 
     animation-name: example;
     animation-duration: 4s;
-    animation-delay: 2s;
     animation-iteration-count: infinite;
 }
 
@@ -31,12 +31,29 @@ body{
 }
 
 @keyframes example {
-    from {margin: 0;}
-    to {margin: 0 40px 0 0;}
+    from {margin: 30px 0 0;}
+    to {margin: 60px 0 0;}
   }
 
 .content-right{
-   border: 1px solid #000;
+   border: 3px solid #585445;
    border-radius: 35px;
-   padding: 20px;
+   padding: 20px 20px 60px 20px;
+   text-align: center;
+   color: #5f5c53;
+   font-size: 20px;
+}
+
+.content-right span{
+    font-size: 80px;
+    display: block;
+}
+
+.btn-link{
+    background: #4886da;
+    color: #fff;
+    padding: 20px;
+    text-decoration: none;
+    margin: 20px auto;
+    display: table;
 }
